# JLPT-Word-Bank

./: .gitignore  Progress.md  README.md  auth.py  data_loader.py  database.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
WordBank/: JLPTWordBank_N3_ALL.xlsx  JLPTWordBank_N4_ALL.xlsx
deploy/: deploy.sh  jlpt.service  nginx-limits.conf  nginx.conf  setup.sh
static/: index.html
